# GridVis

./: CMakeLists.txt  README.md
CPUOnly/: CMakeLists.txt  README.md
CPUOnly/include/: Grid.h  NGLScene.h  Particle.h
CPUOnly/shaders/: FragmentShader.glsl  PosDirVertex.glsl  VertexShader.glsl
CPUOnly/src/: Grid.cpp  NGLScene.cpp  main.cpp
CPUSOA/: CMakeLists.txt  README.md
CPUSOA/include/: Grid.h  NGLScene.h
CPUSOA/shaders/: PosDirVertex.glsl
CPUSOA/src/: Grid.cpp  NGLScene.cpp
ComputeShaderUpdate/: CMakeLists.txt
ComputeShaderUpdate/include/: Grid.h  NGLScene.h
ComputeShaderUpdate/shaders/: PosDirGeo.glsl  PosDirVertex.glsl  UpdateParticlesCompute.glsl
ComputeShaderUpdate/src/: Grid.cpp  NGLScene.cpp
SIMDUpdate/: CMakeLists.txt
SIMDUpdate/include/: Grid.h  NGLScene.h  Vec3x4.h  Vec3x8.h
SIMDUpdate/shaders/: PosDirFragment.glsl  PosDirGeo.glsl
SIMDUpdate/src/: Grid.cpp  NGLScene.cpp  Vec3x4.cpp  Vec3x8.cpp
SIMDUpdateFastTexel/: CMakeLists.txt
SIMDUpdateFastTexel/include/: AlignedArray.h  Grid.h  NGLScene.h  simd.h
SIMDUpdateFastTexel/shaders/: PosDirGeo.glsl  PosDirVertex.glsl
SIMDUpdateFastTexel/src/: Grid.cpp  NGLScene.cpp  main.cpp
TBBThreadedUpdate/: CMakeLists.txt  README.md
TBBThreadedUpdate/include/: Grid.h
TBBThreadedUpdate/shaders/: PosDirVertex.glsl
TBBThreadedUpdate/src/: Grid.cpp  NGLScene.cpp
TexelFetch/: CMakeLists.txt
TexelFetch/include/: Grid.h  NGLScene.h
TexelFetch/shaders/: PosDirGeo.glsl  PosDirVertex.glsl
TexelFetch/src/: Grid.cpp  NGLScene.cpp
ThreadedUpdate/: CMakeLists.txt  README.md
ThreadedUpdate/include/: Grid.h  NGLScene.h
ThreadedUpdate/src/: Grid.cpp  NGLScene.cpp
Vec3x4Tests/: CMakeLists.txt  Vec3x4.cpp  Vec3x4.h  main.cpp  sse2neon.h
Vec3x8Tests/: CMakeLists.txt  Vec3x8.cpp  Vec3x8.h  main.cpp
